Improve gists adapter with files

--- a/app/src/main/res/layout/row_gist.xml
+++ b/app/src/main/res/layout/row_gist.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="?selectableItemBackground"
-              android:orientation="vertical"
-              android:padding="@dimen/gapLarge"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?selectableItemBackground"
+    android:orientation="vertical"
+    android:padding="@dimen/materialize_baseline_grid_x2">
 
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textFileName"
+            style="@style/Gists.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/gapSmall"
+            android:layout_toLeftOf="@+id/gistPrivate"
+            android:layout_toStartOf="@+id/gistPrivate"
+            tools:text="MyFile.java" />
+
+        <TextView
+            android:id="@+id/gistPrivate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="@dimen/gapMedium"
+            android:layout_marginRight="@dimen/gapMedium"
+            android:background="@drawable/private_label"
+            android:gravity="center"
+            android:padding="@dimen/gapSmall"
+            android:text="@string/row_private_gist"
+            android:textColor="@color/privateGist"
+            android:textSize="@dimen/textSizeXMicro"
+            android:visibility="visible" />
+
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/textFileName"
-        style="@style/Gists.Title"
+        android:id="@+id/textDescription"
+        style="@style/Gists.NumFiles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/gapSmall"
-        android:layout_toLeftOf="@+id/gistPrivate"
-        android:layout_toStartOf="@+id/gistPrivate"
-        tools:text="MyFile.java"
-        />
+        tools:text="MyFile.java" />
 
     <TextView
-        android:id="@+id/gistPrivate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="@dimen/gapMedium"
-        android:layout_marginRight="@dimen/gapMedium"
-        android:background="@drawable/private_label"
-        android:gravity="center"
-        android:padding="@dimen/gapSmall"
-        android:text="@string/row_private_gist"
-        android:textColor="@color/privateGist"
-        android:textSize="@dimen/textSizeXMicro"
-        android:visibility="visible"
-        />
+        android:id="@+id/textNumFiles"
+        style="@style/TextAppearance.AppCompat.Caption"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/gapMedium"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/textSizeSmall" />
 
-  </RelativeLayout>
-
-  <TextView
-      android:id="@+id/textDescription"
-      style="@style/Gists.NumFiles"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      tools:text="MyFile.java"
-      />
-
-  <TextView
-      android:id="@+id/textNumFiles"
-      style="@style/TextAppearance.AppCompat.Caption"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginTop="@dimen/gapMedium"
-      android:textColor="@color/secondary_text"
-      android:textSize="@dimen/textSizeSmall"
-      />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/files"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginTop="@dimen/materialize_baseline_grid_x2" />
 
 </LinearLayout>
