--- a/app/src/main/res/layout/issue_detail_issue_comment_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_comment_view.xml
@@ -1,55 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <RelativeLayout
-        android:layout_width="?android:listPreferredItemHeight"
-        android:layout_height="match_parent">
-
-        <com.alorma.github.ui.view.UserAvatarView
-            android:id="@+id/profileIcon"
-            android:layout_width="32dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginEnd="@dimen/material_drawer_item_profile_icon_padding"
-            android:layout_marginRight="@dimen/material_drawer_item_profile_icon_padding"
-            app:uav_show_timeline="true" />
-    </RelativeLayout>
+    android:background="@drawable/issue_comment"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    android:layout_margin="2dp"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/gapMedium">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/userLogin"
-            style="@style/Base.TextAppearance.AppCompat.Caption"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapMedium"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/textSizeMedium"
-            android:textStyle="bold" />
+            android:background="@color/md_grey_200"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/createdAt"
-            style="@style/Base.TextAppearance.AppCompat.Caption"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapSmall"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/textSizeSmall" />
+            <com.alorma.github.ui.view.UserAvatarView
+                android:id="@+id/profileIcon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:uav_show_timeline="false" />
 
-        <com.alorma.github.ui.view.issue.ReactionsView
-            android:id="@+id/reactionsLy"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            <TextView
+                android:id="@+id/userLogin"
+                style="@style/Base.TextAppearance.AppCompat.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/textSizeMedium"
+                android:textStyle="bold"
+                tools:text="Alorma" />
+
+            <TextView
+                android:id="@+id/createdAt"
+                style="@style/Base.TextAppearance.AppCompat.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/materialize_baseline_grid"
+                android:layout_marginStart="@dimen/materialize_baseline_grid"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/textSizeSmall"
+                tools:text="3 days ago" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textBody"
@@ -57,9 +56,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:padding="@dimen/materialize_baseline_grid"
             android:textSize="@dimen/textSizeSmall" />
 
-
+        <com.alorma.github.ui.view.issue.ReactionsView
+            android:id="@+id/reactionsLy"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/md_grey_200" />
     </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
