--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -206,14 +206,10 @@
 
   <style name="Toolbar.AppCompat.Responsive.Transparent"
          parent="AppTheme.AppCompat.Responsive">
-
-
     <item name="android:textColorPrimary">@color/white</item>
     <item name="android:textColorSecondary">@color/white</item>
     <item name="colorControlHighlight">@color/white</item>
     <item name="colorPrimary">@android:color/transparent</item>
-
-
   </style>
 
 
@@ -245,5 +241,23 @@
 
   <style name="AppTheme.ColoredButton">
     <item name="colorButtonNormal">?attr/colorPrimary</item>
+  </style>
+
+  <style name="AppTheme.Repository">
+    <item name="colorPrimary">@color/md_teal_600</item>
+    <item name="colorPrimaryDark">@color/md_teal_800</item>
+    <item name="colorAccent">@color/md_amber_700</item>
+    <item name="colorControlNormal">@color/md_amber_700</item>
+    <item name="colorControlActivated">@color/md_amber_800</item>
+    <item name="colorControlHighlight">@color/md_amber_800</item>
+  </style>
+
+  <style name="AppTheme.Dark.Repository">
+    <item name="colorPrimary">@color/md_teal_600</item>
+    <item name="colorPrimaryDark">@color/md_teal_800</item>
+    <item name="colorAccent">@color/md_amber_600</item>
+    <item name="colorControlNormal">@color/md_amber_600</item>
+    <item name="colorControlActivated">@color/md_amber_700</item>
+    <item name="colorControlHighlight">@color/md_amber_700</item>
   </style>
 </resources>
