--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -192,11 +192,8 @@
 
   </style>
 
-
   <style name="Toolbar.AppCompat.Responsive"
          parent="AppTheme.AppCompat.Responsive">
-
-
     <item name="android:textColorPrimary">@color/white</item>
     <item name="android:textColorSecondary">@color/white</item>
     <item name="colorControlHighlight">@color/white</item>
@@ -243,6 +240,24 @@
     <item name="colorButtonNormal">?attr/colorPrimary</item>
   </style>
 
+  <style name="AppTheme.Events">
+    <item name="colorPrimary">@color/md_indigo_400</item>
+    <item name="colorPrimaryDark">@color/md_indigo_600</item>
+    <item name="colorAccent">@color/md_amber_700</item>
+    <item name="colorControlNormal">@color/md_red_400</item>
+    <item name="colorControlActivated">@color/md_red_600</item>
+    <item name="colorControlHighlight">@color/md_red_600</item>
+  </style>
+
+  <style name="AppTheme.Dark.Events">
+    <item name="colorPrimary">@color/md_indigo_700</item>
+    <item name="colorPrimaryDark">@color/md_indigo_900</item>
+    <item name="colorAccent">@color/md_amber_800</item>
+    <item name="colorControlNormal">@color/md_red_900</item>
+    <item name="colorControlActivated">@color/md_red_900</item>
+    <item name="colorControlHighlight">@color/md_red_900</item>
+  </style>
+
   <style name="AppTheme.Repository">
     <item name="colorPrimary">@color/md_teal_600</item>
     <item name="colorPrimaryDark">@color/md_teal_800</item>
@@ -259,5 +274,41 @@
     <item name="colorControlNormal">@color/md_amber_600</item>
     <item name="colorControlActivated">@color/md_amber_700</item>
     <item name="colorControlHighlight">@color/md_amber_700</item>
+  </style>
+
+  <style name="AppTheme.People">
+    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimaryDark">@color/md_amber_700</item>
+    <item name="colorAccent">@color/md_deep_orange_600</item>
+    <item name="colorControlNormal">@color/md_deep_orange_600</item>
+    <item name="colorControlActivated">@color/md_deep_orange_800</item>
+    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
+  </style>
+
+  <style name="AppTheme.Dark.People">
+    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimaryDark">@color/md_amber_700</item>
+    <item name="colorAccent">@color/md_deep_orange_600</item>
+    <item name="colorControlNormal">@color/md_deep_orange_600</item>
+    <item name="colorControlActivated">@color/md_deep_orange_800</item>
+    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
+  </style>
+
+  <style name="AppTheme.Profile">
+    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimaryDark">@color/md_amber_700</item>
+    <item name="colorAccent">@color/md_deep_orange_600</item>
+    <item name="colorControlNormal">@color/md_deep_orange_600</item>
+    <item name="colorControlActivated">@color/md_deep_orange_800</item>
+    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
+  </style>
+
+  <style name="AppTheme.Dark.Profile">
+    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimaryDark">@color/md_amber_700</item>
+    <item name="colorAccent">@color/md_deep_orange_600</item>
+    <item name="colorControlNormal">@color/md_deep_orange_600</item>
+    <item name="colorControlActivated">@color/md_deep_orange_800</item>
+    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
   </style>
 </resources>
