--- a/app/src/main/res/layout/general_pager.xml
+++ b/app/src/main/res/layout/general_pager.xml
@@ -10,6 +10,7 @@
       android:layout_height="wrap_content"
       android:fitsSystemWindows="true"
       app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      android:background="?colorPrimary"
       >
 
     <android.support.design.widget.TabLayout
@@ -17,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="horizontal"
+        app:tabIndicatorColor="?colorAccent"
         app:layout_scrollFlags="scroll|enterAlways"
         app:tabGravity="fill"
         app:tabMode="scrollable"
