--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -240,6 +240,10 @@
     <item name="colorButtonNormal">?attr/colorPrimary</item>
   </style>
 
+  <!-- APP Themes -->
+
+  <!-- Events themes -->
+
   <style name="AppTheme.Events">
     <item name="colorPrimary">@color/md_indigo_400</item>
     <item name="colorPrimaryDark">@color/md_indigo_600</item>
@@ -250,13 +254,15 @@
   </style>
 
   <style name="AppTheme.Dark.Events">
-    <item name="colorPrimary">@color/md_indigo_700</item>
-    <item name="colorPrimaryDark">@color/md_indigo_900</item>
+    <item name="colorPrimary">@color/md_indigo_600</item>
+    <item name="colorPrimaryDark">@color/md_indigo_800</item>
     <item name="colorAccent">@color/md_amber_800</item>
     <item name="colorControlNormal">@color/md_red_900</item>
     <item name="colorControlActivated">@color/md_red_900</item>
     <item name="colorControlHighlight">@color/md_red_900</item>
   </style>
+
+  <!-- Repositories themes -->
 
   <style name="AppTheme.Repository">
     <item name="colorPrimary">@color/md_teal_600</item>
@@ -276,8 +282,10 @@
     <item name="colorControlHighlight">@color/md_amber_700</item>
   </style>
 
+  <!-- People themes -->
+
   <style name="AppTheme.People">
-    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimary">@color/md_amber_600</item>
     <item name="colorPrimaryDark">@color/md_amber_700</item>
     <item name="colorAccent">@color/md_deep_orange_600</item>
     <item name="colorControlNormal">@color/md_deep_orange_600</item>
@@ -286,7 +294,7 @@
   </style>
 
   <style name="AppTheme.Dark.People">
-    <item name="colorPrimary">@color/md_amber_700</item>
+    <item name="colorPrimary">@color/md_amber_600</item>
     <item name="colorPrimaryDark">@color/md_amber_700</item>
     <item name="colorAccent">@color/md_deep_orange_600</item>
     <item name="colorControlNormal">@color/md_deep_orange_600</item>
@@ -294,18 +302,40 @@
     <item name="colorControlHighlight">@color/md_deep_orange_800</item>
   </style>
 
+  <!-- Profile themes -->
+
   <style name="AppTheme.Profile">
-    <item name="colorPrimary">@color/md_amber_700</item>
-    <item name="colorPrimaryDark">@color/md_amber_700</item>
-    <item name="colorAccent">@color/md_deep_orange_600</item>
-    <item name="colorControlNormal">@color/md_deep_orange_600</item>
-    <item name="colorControlActivated">@color/md_deep_orange_800</item>
-    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
+    <item name="colorPrimary">@color/md_grey_600</item>
+    <item name="colorPrimaryDark">@color/md_grey_700</item>
+    <item name="colorAccent">@color/md_indigo_500</item>
+    <item name="colorControlNormal">@color/md_indigo_500</item>
+    <item name="colorControlActivated">@color/md_indigo_800</item>
+    <item name="colorControlHighlight">@color/md_indigo_800</item>
   </style>
 
   <style name="AppTheme.Dark.Profile">
-    <item name="colorPrimary">@color/md_amber_700</item>
-    <item name="colorPrimaryDark">@color/md_amber_700</item>
+    <item name="colorPrimary">@color/md_grey_600</item>
+    <item name="colorPrimaryDark">@color/md_grey_700</item>
+    <item name="colorAccent">@color/md_indigo_500</item>
+    <item name="colorControlNormal">@color/md_indigo_500</item>
+    <item name="colorControlActivated">@color/md_indigo_800</item>
+    <item name="colorControlHighlight">@color/md_indigo_800</item>
+  </style>
+
+  <!-- Gists themes -->
+
+  <style name="AppTheme.Gists">
+    <item name="colorPrimary">@color/md_brown_400</item>
+    <item name="colorPrimaryDark">@color/md_brown_500</item>
+    <item name="colorAccent">@color/md_deep_orange_600</item>
+    <item name="colorControlNormal">@color/md_deep_orange_600</item>
+    <item name="colorControlActivated">@color/md_deep_orange_800</item>
+    <item name="colorControlHighlight">@color/md_deep_orange_800</item>
+  </style>
+
+  <style name="AppTheme.Dark.Gists">
+    <item name="colorPrimary">@color/md_brown_400</item>
+    <item name="colorPrimaryDark">@color/md_brown_500</item>
     <item name="colorAccent">@color/md_deep_orange_600</item>
     <item name="colorControlNormal">@color/md_deep_orange_600</item>
     <item name="colorControlActivated">@color/md_deep_orange_800</item>
