--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -36,7 +36,7 @@
         android:textColor="@color/privateRepo"
         android:textSize="@dimen/textSizeXMicro"
         android:visibility="invisible"
-        tools:visibility="gone"
+        tools:visibility="visible"
         />
 
     <TextView
