--- a/app/src/main/res/layout/row_commit.xml
+++ b/app/src/main/res/layout/row_commit.xml
@@ -3,13 +3,14 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="?selectableItemBackground"
               android:orientation="horizontal"
     >
 
   <LinearLayout
       android:layout_width="48dp"
-      android:layout_height="48dp"
+      android:layout_height="wrap_content"
       android:orientation="vertical"
       >
 
@@ -22,10 +23,13 @@
 
     <ImageView
         android:id="@+id/verifiedCommit"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@drawable/verified_commit"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="8dp"
+        app:srcCompat="@drawable/commit_verified"
+        android:padding="4dp"
+        android:tint="@color/md_green_500"
         android:contentDescription="@string/content_description_verified_commit"
         />
 
