--- a/app/src/main/res/layout/row_commit.xml
+++ b/app/src/main/res/layout/row_commit.xml
@@ -3,17 +3,37 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="?selectableItemBackground"
               android:orientation="horizontal"
     >
 
-  <com.alorma.github.ui.view.UserAvatarView
-      android:id="@id/avatarAuthor"
-      android:layout_width="36dp"
-      android:layout_height="36dp"
-      android:layout_margin="8dp"
-      />
+  <LinearLayout
+      android:layout_width="48dp"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      >
 
+    <com.alorma.github.ui.view.UserAvatarView
+        android:id="@id/avatarAuthor"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_margin="8dp"
+        />
+
+    <ImageView
+        android:id="@+id/verifiedCommit"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp"
+        app:srcCompat="@drawable/commit_verified"
+        android:padding="4dp"
+        android:tint="@color/md_green_500"
+        android:contentDescription="@string/content_description_verified_commit"
+        />
+
+  </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -88,19 +108,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        />
-
-    <TextView
-        android:id="@+id/textNums"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/gapLarge"
-        android:layout_marginTop="@dimen/gapMedium"
-        android:background="@drawable/bg_event_commits"
-        android:padding="@dimen/gapSmall"
-        android:paddingLeft="@dimen/gapMedium"
-        android:textSize="@dimen/textSizeMicro"
         />
   </LinearLayout>
 </LinearLayout>
