--- a/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
@@ -66,7 +66,7 @@
             android:maxLines="1"
             android:ellipsize="middle"
             />
-        <com.alorma.diff.lib.DiffTextView
+        <com.alorma.github.ui.view.DiffTextView
             android:id="@+id/textDiff"
             android:padding="4dp"
             style="@style/TextAppearance.AppCompat.Caption"
