--- a/app/src/main/res/layout/row_issue.xml
+++ b/app/src/main/res/layout/row_issue.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?selectableItemBackground"
@@ -33,11 +33,42 @@
       android:textSize="@dimen/textSizeMedium"
       />
 
+  <LinearLayout
+      android:id="@+id/milestoneLy"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="@dimen/gapMedium"
+      android:layout_marginTop="@dimen/gapMedium"
+      android:layout_toLeftOf="@+id/numComments"
+      android:layout_toRightOf="@+id/imageState"
+      android:layout_toStartOf="@+id/numComments"
+      android:layout_below="@+id/textTitle"
+      android:orientation="horizontal"
+      >
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:srcCompat="@drawable/milestone"
+        android:tint="@color/md_grey_500"
+        android:layout_marginRight="4dp"
+        />
+
+    <TextView
+        android:id="@+id/textMilestone"
+        style="@style/TextAppearance.AppCompat.Subhead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/md_grey_500"
+        android:maxLines="2"
+        android:textSize="@dimen/textSizeMicro"
+        />
+  </LinearLayout>
+
   <com.wefika.flowlayout.FlowLayout
       android:id="@+id/labelsLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/textTitle"
+      android:layout_below="@+id/milestoneLy"
       android:layout_toLeftOf="@+id/numComments"
       android:layout_toRightOf="@+id/imageState"
       android:layout_toStartOf="@+id/numComments"
