--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -20,8 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        app:expandedTitleMarginTop="80dp"
+        app:expandedTitleMarginStart="112dp"
+        app:expandedTitleMarginTop="0dp"
         app:expandedTitleGravity="center"
+        app:contentScrim="?colorPrimary"
         app:layout_behavior="com.alorma.github.ui.utils.AvatarImageBehavior"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         >
@@ -29,7 +31,7 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="@dimen/gapXLarge"
+          android:layout_marginTop="56dp"
           android:fitsSystemWindows="true"
           android:orientation="horizontal"
           app:layout_collapseMode="parallax"
@@ -58,7 +60,6 @@
             tools:text="Bernat Borrás Paronella"
             />
       </LinearLayout>
-
       <android.support.v7.widget.Toolbar
           android:id="@id/toolbar"
           android:layout_width="match_parent"
@@ -68,6 +69,7 @@
           app:theme="@style/Toolbar.AppCompat.Responsive.Transparent"
           android:background="?colorPrimary"
           />
+
     </android.support.design.widget.CollapsingToolbarLayout>
 
     <android.support.design.widget.TabLayout
