Fix gist file fragment

--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -11,9 +11,10 @@
       android:visibility="gone"
       />
 
-  <WebView
+  <com.pddstudio.highlightjs.HighlightJsView
       android:id="@+id/webview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       />
+
 </FrameLayout>
