Implement single file download #453

--- a/app/src/main/res/menu/repo_content_item.xml
+++ b/app/src/main/res/menu/repo_content_item.xml
@@ -21,4 +21,9 @@
       android:title="@string/copy_content_url"
       />
 
+  <item
+      android:id="@+id/action_content_download"
+      android:title="@string/download"
+      />
+
 </menu>
