--- a/app/src/main/res/layout/image_file_fragment.xml
+++ b/app/src/main/res/layout/image_file_fragment.xml
@@ -6,10 +6,12 @@
              android:background="?gitskarios_webview"
     >
 
-  <com.pddstudio.highlightjs.HighlightJsView
-      android:id="@+id/webview"
+  <ImageView
+      android:id="@+id/imageView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:scaleType="centerInside"
+      android:visibility="gone"
       />
 
   <ProgressBar
