--- a/app/src/main/res/layout/file_fragment.xml
+++ b/app/src/main/res/layout/file_fragment.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
@@ -22,4 +23,37 @@
       android:visibility="gone"
       tools:visibility="visible"
       />
+
+  <!--
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|right"
+    android:orientation="vertical"
+    >
+
+  <android.support.design.widget.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:borderWidth="0dp"
+      app:backgroundTint="@color/white"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginBottom="8dp"
+      android:id="@+id/zoomOut"
+      />
+
+  <android.support.design.widget.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:borderWidth="0dp"
+      app:backgroundTint="?colorPrimary"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginBottom="16dp"
+      android:id="@+id/zoomIn"
+      />
+
+</LinearLayout>
+-->
 </FrameLayout>
