* update to gradle 2.14 * update to support libraries v24.0.0 * update to build tools v24.0.0 * update to target sdk 24 * update to compile sdk 24 * update material dialogs library * update materialdrawer * update android iconics * udpate fastadapter * update aboutlibraries * update icon fonts * update materialize * update android gradle build tools

--- a/app/src/main/res/menu/issue_list_filter.xml
+++ b/app/src/main/res/menu/issue_list_filter.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-  <item
-      android:id="@+id/action_search"
-      android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-      android:orderInCategory="3000"
-      android:title="@string/action_search"
-      app:showAsAction="always"
-      />
+    <item
+        android:id="@+id/action_search"
+        android:orderInCategory="3000"
+        android:title="@string/action_search"
+        app:showAsAction="always" />
 
 </menu>
