--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <item
-      android:id="@+id/action_notifications"
-      android:orderInCategory="100"
-      android:title="@string/action_notifications"
-      app:actionLayout="@layout/menu_badge"
-      app:showAsAction="always"
-      />
-  <item
-      android:id="@+id/action_search"
-      android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-      android:orderInCategory="200"
-      android:title="@string/action_search"
-      app:showAsAction="always"
-      />
+    <item
+        android:id="@+id/action_notifications"
+        android:orderInCategory="100"
+        android:title="@string/action_notifications"
+        app:actionLayout="@layout/menu_action_item_badge"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_search"
+        android:orderInCategory="200"
+        android:title="@string/action_search"
+        app:showAsAction="always" />
 
 </menu>
