Move github flavor to main

--- a/app/src/debug/res/values/config.xml
+++ b/app/src/debug/res/values/config.xml
@@ -3,4 +3,5 @@
   <string name="account_name">Github account DEV</string>
   <string name="oauth_scheme">gitskariosgithubdevel</string>
   <string name="account_type">com.alorma.github.debug.account</string>
+  <string name="app_name">GitSkarios DEV</string>
 </resources>
