--- a/app/src/main/res/layout/repo_overview_numbers.xml
+++ b/app/src/main/res/layout/repo_overview_numbers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:showIn="@layout/repo_overview_fragment"
     >
 
@@ -97,29 +98,98 @@
       android:orientation="horizontal"
       >
 
-    <Button
-        android:id="@+id/starredPlaceholder"
-        style="@style/PlaceholderRepoAbout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/gapMedium"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        >
 
-    <Button
-        android:id="@+id/watchedPlaceHolder"
-        style="@style/PlaceholderRepoAbout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/gapMedium"
-        />
+      <com.varunest.sparkbutton.SparkButton
+          android:layout_width="56dp"
+          android:layout_height="56dp"
+          android:src="?gitskarios_icons"
+          android:id="@+id/starredPlaceholder"
+          app:sparkbutton_activeImage="@drawable/star_active"
+          app:sparkbutton_inActiveImage="@drawable/star_inactive"
+          app:sparkbutton_iconSize="20dp"
+          app:sparkbutton_primaryColor="?colorAccent"
+          app:sparkbutton_secondaryColor="?colorPrimary"
+          />
 
-    <Button
-        android:id="@+id/forkPlaceHolder"
-        style="@style/PlaceholderRepoAbout"
+      <TextView
+          android:id="@+id/starredTextView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:textColor="?gitskarios_icons"
+          android:gravity="center"
+          android:layout_marginLeft="@dimen/gapMedium"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/gapMedium"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        >
+
+      <com.varunest.sparkbutton.SparkButton
+          android:layout_width="56dp"
+          android:layout_height="56dp"
+          android:src="?gitskarios_icons"
+          android:id="@+id/watchedPlaceHolder"
+          app:sparkbutton_activeImage="@drawable/eye_active"
+          app:sparkbutton_inActiveImage="@drawable/eye_inactive"
+          app:sparkbutton_iconSize="20dp"
+          app:sparkbutton_primaryColor="?colorAccent"
+          app:sparkbutton_secondaryColor="?colorPrimary"
+          />
+
+      <TextView
+          android:id="@+id/watchedTextView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:textColor="?gitskarios_icons"
+          android:gravity="center"
+          android:layout_marginLeft="@dimen/gapMedium"
+          />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        >
+
+      <com.varunest.sparkbutton.SparkButton
+          android:layout_width="56dp"
+          android:layout_height="56dp"
+          android:src="?gitskarios_icons"
+          android:id="@+id/forkedPlaceholder"
+          app:sparkbutton_activeImage="@drawable/repo_forked_active"
+          app:sparkbutton_inActiveImage="@drawable/repo_forked_active"
+          app:sparkbutton_iconSize="@dimen/repo_about_icon"
+          app:sparkbutton_primaryColor="?colorAccent"
+          app:sparkbutton_secondaryColor="?colorPrimary"
+          />
+
+      <TextView
+          android:id="@+id/forkedTextView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:textColor="?gitskarios_icons"
+          android:gravity="center"
+          android:layout_marginLeft="@dimen/gapMedium"
+          />
+
+    </LinearLayout>
 
   </LinearLayout>
 </merge>
