--- a/app/src/main/res/layout-land/activity_welcome.xml
+++ b/app/src/main/res/layout-land/activity_welcome.xml
@@ -56,7 +56,7 @@
           android:id="@+id/login_password"
           >
 
-        <EditText
+        <com.maksim88.passwordedittext.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
