--- a/app/src/main/res/layout/activity_welcome_otp.xml
+++ b/app/src/main/res/layout/activity_welcome_otp.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".ui.activity.WelcomeActivity"
+             tools:context=".ui.activity.login.OtpCodeActivity"
     >
 
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
