--- a/app/src/main/res/layout/activity_alternate_login.xml
+++ b/app/src/main/res/layout/activity_alternate_login.xml
@@ -9,7 +9,7 @@
                                      xmlns:app="http://schemas.android.com/apk/res-auto"
                                      android:id="@id/toolbar"
                                      android:layout_width="match_parent"
-                                     android:layout_height="120dp"
+                                     android:layout_height="240dp"
                                      android:background="?colorPrimary"
                                      app:contentInsetStart="@dimen/second_keyline"
                                      app:popupTheme="@style/Toolbar.Popup.AppCompat"
@@ -22,7 +22,7 @@
       android:layout_marginBottom="80dp"
       android:layout_marginLeft="@dimen/gapXLarge"
       android:layout_marginRight="@dimen/gapXLarge"
-      android:layout_marginTop="36dp"
+      android:layout_marginTop="100dp"
       android:paddingBottom="0dp"
       >
 
@@ -37,6 +37,7 @@
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginTop="?actionBarSize"
           android:id="@+id/login_username"
           >
 
@@ -53,14 +54,14 @@
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:id="@+id/login_password"
+          android:id="@+id/login_token"
           >
 
         <com.maksim88.passwordedittext.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="@string/login_password"
+            android:hint="@string/login_token"
             />
 
       </android.support.design.widget.TextInputLayout>
@@ -69,7 +70,7 @@
           android:id="@+id/openLogin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:text="@string/oauth_login"
+          android:text="@string/login_button"
           />
     </LinearLayout>
   </android.support.v7.widget.CardView>
