--- a/app/src/main/res/layout/row_issue.xml
+++ b/app/src/main/res/layout/row_issue.xml
@@ -25,8 +25,10 @@
       android:layout_alignParentTop="true"
       android:layout_marginBottom="@dimen/gapMedium"
       android:layout_marginTop="@dimen/gapMedium"
+      android:gravity="left"
       android:layout_toLeftOf="@+id/numComments"
       android:layout_toRightOf="@+id/imageState"
+      android:layout_toEndOf="@+id/imageState"
       android:layout_toStartOf="@+id/numComments"
       android:ellipsize="end"
       android:maxLines="2"
@@ -41,6 +43,7 @@
       android:layout_marginTop="@dimen/gapMedium"
       android:layout_toLeftOf="@+id/numComments"
       android:layout_toRightOf="@+id/imageState"
+      android:layout_toEndOf="@+id/imageState"
       android:layout_toStartOf="@+id/numComments"
       android:layout_below="@+id/textTitle"
       android:orientation="horizontal"
